# developer-analytics

./: .gitignore  README.md  description.md
apps/agent/: ABOUT.md  agent.py  buffer.py  config.json  event.py  instance_manager.py  logger_config.py  main.py  pyproject.toml  session.py
apps/agent/src/: agent.py  main.py
apps/agent/src/services/: batchRequest.py  buffer.py  event.py  instance_manager.py  session.py
apps/agent/src/utils/: config.py  idle.py
apps/server/: .env.sample  .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  tsconfig.json
apps/server/prisma/: schema.prisma
apps/server/prisma/migrations/20260622114149_init/: migration.sql
apps/server/prisma/migrations/20260622155513_add_apikey_and_raw_event_table/: migration.sql
apps/server/src/: app.ts  env.ts  server.ts
apps/server/src/config/: db.ts
apps/server/src/controller/: auth.controller.ts  batch.controller.ts
apps/server/src/middleware/: error.middleware.ts  validate.middleware.ts
apps/server/src/queue/: event.queue.ts
apps/server/src/routes/: auth.router.ts  batch.route.ts  root.router.ts
apps/server/src/schemas/: eventBatch.schema.ts  user.schema.ts
apps/server/src/services/: rawEvent.service.ts  user.service.ts
apps/server/src/utils/: apiResponse.ts  appError.ts  generateToken.ts  storeCookie.ts
apps/server/src/worker/: event.worker.ts
