[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "pywin32>=312",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]

[tool.ruff.lint.isort]
force-single-line = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder"
]